# vipu

./: .env.example  .gitignore  LICENSE  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  ci.yml  docker-build.yml  docs.yml  frontend-ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  config.py  forecasting.py  migrations.py  models.py
backend/app/routes/: accounts.py  budget.py  expenses.py  goals.py  health.py  income.py  networth.py  seed.py  settings.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_budget.py  test_goals.py  test_migrations.py  test_networth.py
deploy/: .env.example  docker-compose.yml
docs/: api.html  guide.html  index.html  openapi.json
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/networth/: page.tsx
frontend/components/budget/: AccountsSection.tsx  BudgetSummary.tsx  CollapsibleSection.tsx  CreditCardsSection.tsx  DeductionsSection.tsx  EditDialog.tsx  ExpensesSection.tsx  GoalFormDialog.tsx  GoalsSection.tsx  IncomeSection.tsx  SavingsGoalsSection.tsx  SettingsCard.tsx  TotalsCard.tsx  index.ts
frontend/components/goals/: GoalForm.tsx  GoalsList.tsx  index.ts
frontend/hooks/: useBudget.ts  useGoals.ts  useNetWorth.ts  useTheme.ts
frontend/lib/: api.ts  utils.ts
frontend/types/: index.ts
(+10 files in other folders)
